Enforce Cassandra's WHERE restriction rules
WHERE understood only = and IN, and every statement decided for itself
whether a restriction was allowed by asking whether the column was in
the primary key. That both over-accepts - one primary key column alone
is not a query - and under-accepts, since a range on a clustering column
is ordinary Cassandra.

Restrictions now carry their columns as a list, so (a, b) > (1, 2) is
the same shape as a > 1, and comparison uses the column's DataType
rather than Object#compareTo. RestrictionRules holds the rules once, so
SELECT, UPDATE and DELETE cannot drift: the partition key pinned by =
or IN, clustering columns left to right with a range only on the last,
ALLOW FILTERING or an index for anything else, and DELETE free to name
a partition without its clustering columns.